fix setting panel under the table view by adjusting its z-index

--- a/css/dataTableExample.css
+++ b/css/dataTableExample.css
@@ -29,6 +29,7 @@ body {
     transform: translateX(-100%);
     transition: transform 1s, opacity .4s;
     opacity: 0;
+    z-index: 99;
 }
 
 .setting-active {
